--- a/.github/workflows/translate_es.yml
+++ b/.github/workflows/translate_es.yml
@@ -63,7 +63,10 @@ jobs:
 
       - name: Build mdBook
         run: |
+          git checkout "$BRANCH"
+          git pull
           MDBOOK_BOOK__LANGUAGE=$BRANCH mdbook build || (echo "Error logs" && cat hacktricks-preprocessor-error.log && echo "" && echo "" && echo "Debug logs" && (cat hacktricks-preprocessor.log | tail -n 20) && exit 1)
+
       
       - name: Update searchindex.js in repo
         run: |
@@ -83,4 +86,11 @@ jobs:
       
       # Sync the build to S3
       - name: Sync to S3
-        run: aws s3 sync ./book s3://hacktricks-cloud/$BRANCH --delete
+        run: |
+          echo "Current branch:"
+          git rev-parse --abbrev-ref HEAD
+          echo "Syncing $BRANCH to S3"
+          aws s3 sync ./book s3://hacktricks-wiki/$BRANCH --delete
+          echo "Sync completed"
+          echo "Cat 3 files from the book"
+          find . -type f -name 'index.html' -print | head -n 3 | xargs -r cat
