--- a/.github/workflows/translate_fr.yml
+++ b/.github/workflows/translate_fr.yml
@@ -91,7 +91,7 @@ jobs:
           echo "Current branch:"
           git rev-parse --abbrev-ref HEAD
           echo "Syncing $BRANCH to S3"
-          aws s3 sync ./book s3://hacktricks-wiki/$BRANCH --delete
+          aws s3 sync ./book s3://hacktricks-cloud/$BRANCH --delete
           echo "Sync completed"
           echo "Cat 3 files from the book"
           find . -type f -name 'index.html' -print | head -n 3 | xargs -r cat
