--- a/.github/workflows/translate_all.yml
+++ b/.github/workflows/translate_all.yml
@@ -78,6 +78,8 @@ jobs:
       
       - name: Download language branch & update refs
         run: |
+          pwd
+          ls -la
           git config --global --add safe.directory /__w/hacktricks/hacktricks-cloud
           git config --global user.name 'Translator'
           git config --global user.email 'github-actions@github.com'
