--- a/.github/workflows/translate_all.yml
+++ b/.github/workflows/translate_all.yml
@@ -80,7 +80,7 @@ jobs:
         run: |
           pwd
           ls -la
-          git config --global --add safe.directory /__w/hacktricks/hacktricks-cloud
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
           git config --global user.name 'Translator'
           git config --global user.email 'github-actions@github.com'
           git config pull.rebase false
