--- a/.github/workflows/translate_all.yml
+++ b/.github/workflows/translate_all.yml
@@ -66,16 +66,14 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install wget -y
-          cd scripts
-          wget -O get_and_save_refs.py https://raw.githubusercontent.com/carlospolop/hacktricks-cloud/master/scripts/get_and_save_refs.py
-          wget -O compare_and_fix_refs.py https://raw.githubusercontent.com/carlospolop/hacktricks-cloud/master/scripts/compare_and_fix_refs.py
-          wget -O translator.py https://raw.githubusercontent.com/carlospolop/hacktricks-cloud/master/scripts/translator.py
-          cd ..
-      
+          wget -O /tmp/get_and_save_refs.py https://raw.githubusercontent.com/HackTricks-wiki/hacktricks-cloud/master/scripts/get_and_save_refs.py
+          wget -O /tmp/compare_and_fix_refs.py https://raw.githubusercontent.com/HackTricks-wiki/hacktricks-cloud/master/scripts/compare_and_fix_refs.py
+          wget -O /tmp/translator.py https://raw.githubusercontent.com/HackTricks-wiki/hacktricks-cloud/master/scripts/translator.py
+
       - name: Run get_and_save_refs.py
         run: |
-          python scripts/get_and_save_refs.py
-      
+          python /tmp/get_and_save_refs.py
+
       - name: Download language branch & update refs
         run: |
           pwd
@@ -86,7 +84,7 @@ jobs:
           git config pull.rebase false
           git checkout $BRANCH
           git pull
-          python scripts/compare_and_fix_refs.py --files-unmatched-paths /tmp/file_paths.txt
+          python /tmp/compare_and_fix_refs.py --files-unmatched-paths /tmp/file_paths.txt
           git add .
           git commit -m "Fix unmatched refs" || echo "No changes to commit"
           git push || echo "No changes to push"
@@ -108,7 +106,7 @@ jobs:
           touch /tmp/file_paths.txt
 
           if [ -s /tmp/file_paths.txt ]; then
-            python scripts/translator.py \
+            python /tmp/translator.py \
               --language "$LANGUAGE" \
               --branch "$BRANCH" \
               --api-key "$OPENAI_API_KEY" \
