--- a/.github/workflows/translate_all.yml
+++ b/.github/workflows/translate_all.yml
@@ -20,6 +20,7 @@ jobs:
   translate:
     name: Translate → ${{ matrix.name }} (${{ matrix.branch }})
     runs-on: ubuntu-latest
+    environment: prod
 
     # Run N languages in parallel (tune max-parallel if needed)
     strategy:
