--- a/.github/workflows/build_master.yml
+++ b/.github/workflows/build_master.yml
@@ -50,7 +50,9 @@ jobs:
           git config pull.rebase false
 
           # Ensure we're on the target branch and up to date
-          git pull --ff-only
+          # Handle force-pushed branches by resetting to origin/master
+          git fetch origin
+          git reset --hard origin/master
 
           # Choose the file to keep at HEAD:
           # 1) Prefer freshly built version from book/
