--- a/.github/workflows/build_master.yml
+++ b/.github/workflows/build_master.yml
@@ -35,63 +35,59 @@ jobs:
       - name: Build mdBook
         run: MDBOOK_BOOK__LANGUAGE=en mdbook build || (echo "Error logs" && cat hacktricks-preprocessor-error.log && echo "" && echo "" && echo "Debug logs" && (cat hacktricks-preprocessor.log | tail -n 20) && exit 1)
       
-      - name: Update searchindex in repo (purge history, keep current on HEAD)
+      - name: Install GitHub CLI
+        run: |
+          curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg \
+          && sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg \
+          && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
+          && sudo apt update \
+          && sudo apt install gh -y
+      
+      - name: Publish search index release asset
         shell: bash
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           set -euo pipefail
 
-          pwd
-          ls -la
-          ls -la book
+          ASSET="book/searchindex.js"
+          TAG="searchindex-en"
+          TITLE="Search Index (en)"
 
-          git config --global --add safe.directory /__w/hacktricks-cloud/hacktricks-cloud
-          git config --global user.email "build@example.com"
-          git config --global user.name "Build master"
-          git config pull.rebase false
-
-          # Ensure we're on the target branch and up to date
-          # Handle force-pushed branches by resetting to origin/master
-          git fetch origin
-          git reset --hard origin/master
-
-          # Choose the file to keep at HEAD:
-          # 1) Prefer freshly built version from book/
-          # 2) Fallback to the file currently at HEAD (if it exists)
-          HAS_FILE=0
-          if [ -f "book/searchindex.js" ]; then
-            cp "book/searchindex.js" /tmp/sidx.js
-            HAS_FILE=1
-          elif git cat-file -e "HEAD:searchindex.js" 2>/dev/null; then
-            git show "HEAD:searchindex.js" > /tmp/sidx.js
-            HAS_FILE=1
+          if [ ! -f "$ASSET" ]; then
+            echo "Expected $ASSET to exist after build" >&2
+            exit 1
           fi
 
-          # Skip if there's nothing to purge AND nothing to keep
-          if [ "$HAS_FILE" = "1" ] || git rev-list -n 1 HEAD -- "searchindex.js" >/dev/null 2>&1; then
-            # Fail early if working tree is dirty (avoid confusing rewrites)
-            git diff --quiet || { echo "Working tree has uncommitted changes; aborting purge." >&2; exit 1; }
+          TOKEN="${PAT_TOKEN:-${GITHUB_TOKEN:-}}"
+          if [ -z "$TOKEN" ]; then
+            echo "No token available for GitHub CLI" >&2
+            exit 1
+          fi
+          export GH_TOKEN="$TOKEN"
 
-            # Install git-filter-repo and ensure it's on PATH
-            python -m pip install --quiet --user git-filter-repo
-            export PATH="$HOME/.local/bin:$PATH"
-
-            # Rewrite ONLY the current branch, dropping all historical blobs of searchindex.js
-            git filter-repo --force --path "searchindex.js" --invert-paths --refs "$(git symbolic-ref -q HEAD)"
-
-            # Re-add the current version on top of rewritten history (keep it in HEAD)
-            if [ "$HAS_FILE" = "1" ]; then
-              mv /tmp/sidx.js "searchindex.js"
-              git add "searchindex.js"
-              git commit -m "Update searchindex (purged history; keep current)"
-            else
-              echo "No current searchindex.js to re-add after purge."
-            fi
-
-            # Safer force push (only updates if remote hasn't advanced)
-            git push --force-with-lease
+          # Delete the release if it exists
+          echo "Checking if release $TAG exists..."
+          if gh release view "$TAG" --repo "$GITHUB_REPOSITORY" >/dev/null 2>&1; then
+            echo "Release $TAG already exists, deleting it..."
+            gh release delete "$TAG" --yes --repo "$GITHUB_REPOSITORY" --cleanup-tag || {
+              echo "Failed to delete release, trying without cleanup-tag..."
+              gh release delete "$TAG" --yes --repo "$GITHUB_REPOSITORY" || {
+                echo "Warning: Could not delete existing release, will try to recreate..."
+              }
+            }
+            sleep 2  # Give GitHub API a moment to process the deletion
           else
-            echo "Nothing to purge; skipping."
+            echo "Release $TAG does not exist, proceeding with creation..."
           fi
+          
+          # Create new release (with force flag to overwrite if deletion failed)
+          gh release create "$TAG" "$ASSET" --title "$TITLE" --notes "Automated search index build for master" --repo "$GITHUB_REPOSITORY" || {
+            echo "Failed to create release, trying with force flag..."
+            gh release delete "$TAG" --yes --repo "$GITHUB_REPOSITORY" --cleanup-tag >/dev/null 2>&1 || true
+            sleep 2
+            gh release create "$TAG" "$ASSET" --title "$TITLE" --notes "Automated search index build for master" --repo "$GITHUB_REPOSITORY"
+          }
 
       # Login in AWs
       - name: Configure AWS credentials using OIDC
