--- a/.github/workflows/build_master.yml
+++ b/.github/workflows/build_master.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Publish search index release asset
         shell: bash
         env:
-          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -euo pipefail
 
@@ -59,7 +59,7 @@ jobs:
             exit 1
           fi
 
-          TOKEN="${PAT_TOKEN:-${GITHUB_TOKEN:-}}"
+          TOKEN="${GITHUB_TOKEN}"
           if [ -z "$TOKEN" ]; then
             echo "No token available for GitHub CLI" >&2
             exit 1
