--- a/.github/workflows/translate_all.yml
+++ b/.github/workflows/translate_all.yml
@@ -147,7 +147,7 @@ jobs:
       - name: Publish search index release asset
         shell: bash
         env:
-          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -euo pipefail
 
@@ -160,7 +160,7 @@ jobs:
             exit 1
           fi
 
-          TOKEN="${PAT_TOKEN:-${GITHUB_TOKEN:-}}"
+          TOKEN="${GITHUB_TOKEN}"
           if [ -z "$TOKEN" ]; then
             echo "No token available for GitHub CLI" >&2
             exit 1
