--- a/.github/workflows/translate_all.yml
+++ b/.github/workflows/translate_all.yml
@@ -107,7 +107,7 @@ jobs:
             fi
           done
 
-          echo "Files to translate:"
+          echo "Files to translate (`wc -l < /tmp/file_paths.txt`):"
           cat /tmp/file_paths.txt
           echo ""
           echo ""
