--- a/.github/workflows/translate_all.yml
+++ b/.github/workflows/translate_all.yml
@@ -58,6 +58,12 @@ jobs:
       BRANCH:   ${{ matrix.branch }}
 
     steps:
+      - name: Wait for build_master to start
+        run: |
+          echo "Waiting 30 seconds to let build_master.yml initialize and reset the searchindex repo..."
+          sleep 30
+          echo "Continuing with translation workflow"
+      
       - name: Checkout code
         uses: actions/checkout@v4
         with:
