--- a/.github/workflows/build_master.yml
+++ b/.github/workflows/build_master.yml
@@ -95,8 +95,8 @@ jobs:
           TIMESTAMP=$(date -u +"%Y-%m-%d %H:%M:%S UTC")
           git commit -m "Update searchindex files - ${TIMESTAMP}" --allow-empty
           
-          # Force push to replace main branch (deletes history, keeps all files)
-          git push -f origin new-main:main
+          # Force push to replace master branch (deletes history, keeps all files)
+          git push -f origin new-main:master
           
           echo "Successfully reset repository history and pushed all searchindex files"
 
