--- a/.github/workflows/build_master.yml
+++ b/.github/workflows/build_master.yml
@@ -88,9 +88,8 @@ jobs:
           RATIO=$(awk "BEGIN {printf \"%.1f\", ($COMPRESSED_SIZE / $ORIGINAL_SIZE) * 100}")
           echo "Compression: ${ORIGINAL_SIZE} bytes -> ${COMPRESSED_SIZE} bytes (${RATIO}%)"
           
-          # Copy both versions to the searchindex repo
+          # Copy ONLY the .gz version to the searchindex repo (no uncompressed .js)
           cd /tmp/searchindex-repo
-          cp "${GITHUB_WORKSPACE}/${ASSET}" "${FILENAME}"
           cp "${GITHUB_WORKSPACE}/${ASSET}.gz" "${FILENAME}.gz"
           
           # Stage all files
