--- a/.github/workflows/translate_all.yml
+++ b/.github/workflows/translate_all.yml
@@ -235,7 +235,7 @@ jobs:
                     fi
                   fi
                   
-                  sleep $((RETRY_COUNT * 2))  # Exponential backoff
+                  sleep 1
                 else
                   echo "Failed to push after $MAX_RETRIES attempts"
                   exit 1
