--- a/.github/workflows/build_master.yml
+++ b/.github/workflows/build_master.yml
@@ -88,9 +88,32 @@ jobs:
           RATIO=$(awk "BEGIN {printf \"%.1f\", ($COMPRESSED_SIZE / $ORIGINAL_SIZE) * 100}")
           echo "Compression: ${ORIGINAL_SIZE} bytes -> ${COMPRESSED_SIZE} bytes (${RATIO}%)"
           
-          # Copy ONLY the .gz version to the searchindex repo (no uncompressed .js)
+          # XOR encrypt the compressed file
+          KEY='Prevent_Online_AVs_From_Flagging_HackTricks_Search_Gzip_As_Malicious_394h7gt8rf9u3rf9g'
+          python3 - << 'PYTHON_SCRIPT'
+import sys
+key = sys.argv[1]
+input_file = sys.argv[2]
+output_file = sys.argv[3]
+
+with open(input_file, 'rb') as f:
+    data = f.read()
+
+key_bytes = key.encode('utf-8')
+encrypted = bytearray(len(data))
+for i in range(len(data)):
+    encrypted[i] = data[i] ^ key_bytes[i % len(key_bytes)]
+
+with open(output_file, 'wb') as f:
+    f.write(encrypted)
+
+print(f"Encrypted: {len(data)} bytes")
+PYTHON_SCRIPT
+          python3 - "$KEY" "${ASSET}.gz" "${ASSET}.gz.enc"
+          
+          # Copy ONLY the encrypted .gz version to the searchindex repo (no uncompressed .js)
           cd /tmp/searchindex-repo
-          cp "${GITHUB_WORKSPACE}/${ASSET}.gz" "${FILENAME}.gz"
+          cp "${GITHUB_WORKSPACE}/${ASSET}.gz.enc" "${FILENAME}.gz"
           
           # Stage all files
           git add -A
