--- a/.github/workflows/build_master.yml
+++ b/.github/workflows/build_master.yml
@@ -105,26 +105,7 @@ jobs:
               f.write(encrypted)
           print(f"Encrypted: {len(data)} bytes")
           EOF
-          python3 /tmp/xor_encrypt.py "$KEY" "${ASSET}.gz" "${ASSET}.gz.enc" '
-import sys
-key = sys.argv[1]
-input_file = sys.argv[2]
-output_file = sys.argv[3]
-
-with open(input_file, 'rb') as f:
-    data = f.read()
-
-key_bytes = key.encode('utf-8')
-encrypted = bytearray(len(data))
-for i in range(len(data)):
-    encrypted[i] = data[i] ^ key_bytes[i % len(key_bytes)]
-
-with open(output_file, 'wb') as f:
-    f.write(encrypted)
-
-print(f"Encrypted: {len(data)} bytes")
-PYTHON_SCRIPT
-          python3 - "$KEY" "${ASSET}.gz" "${ASSET}.gz.enc"
+          python3 /tmp/xor_encrypt.py "$KEY" "${ASSET}.gz" "${ASSET}.gz.enc"
           
           # Copy ONLY the encrypted .gz version to the searchindex repo (no uncompressed .js)
           cd /tmp/searchindex-repo
