--- a/book.toml
+++ b/book.toml
@@ -8,7 +8,16 @@ title = "HackTricks Cloud"
 create-missing = false
 extra-watch-dirs = ["translations"]
 
+[preprocessor.alerts]
+after = ["links"]
+
+[preprocessor.reading-time]
+
+[preprocessor.pagetoc]
+
 [preprocessor.tabs]
+
+[preprocessor.codename]
 
 [preprocessor.hacktricks]
 command = "python3 ./hacktricks-preprocessor.py"
