--- a/.github/workflows/upload_ht_to_ai.yml
+++ b/.github/workflows/upload_ht_to_ai.yml
@@ -20,4 +20,4 @@ jobs:
         
       # 2. Execute the script
       - name: Execute script
-        run: export MY_OPENAI_API_KEY=${{ secrets.MY_OPENAI_API_KEY }}; python3 "./upload_ht_to_ai.py"
+        run: export MY_OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY_UPLOAD_TO_OPENAI }}; python3 "./upload_ht_to_ai.py"
