--- a/book.toml
+++ b/book.toml
@@ -23,6 +23,7 @@ additional-js = [
     "theme/sponsor.js",
     "theme/ai.js"
 ]
+google-analytics = "G-DSTYJWERH0"
 no-section-label = true
 preferred-dark-theme = "hacktricks-dark"
 default-theme = "hacktricks-light"
