Fix CloudFront invalidation globbing

--- a/.github/workflows/cloudfront_invalidate_assets.yml
+++ b/.github/workflows/cloudfront_invalidate_assets.yml
@@ -91,6 +91,8 @@ jobs:
       - name: Create CloudFront invalidation
         if: steps.paths.outputs.paths != ''
         run: |
+          set -euo pipefail
+          set -f
           aws cloudfront create-invalidation \
             --distribution-id "${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}" \
             --paths ${{ steps.paths.outputs.paths }}
