--- a/.github/workflows/build_master.yml
+++ b/.github/workflows/build_master.yml
@@ -148,4 +148,9 @@ jobs:
       # Sync the build to S3
       - name: Sync to S3
         run: aws s3 sync ./book s3://hacktricks-cloud/en --delete
+
+      - name: Upload root ads.txt
+        run: |
+          aws s3 cp ./ads.txt s3://hacktricks-cloud/ads.txt --content-type text/plain --cache-control max-age=300
+          aws s3 cp ./ads.txt s3://hacktricks-cloud/en/ads.txt --content-type text/plain --cache-control max-age=300
       
